# rhino_shapely_interop

./: CHANGELOG.rst  LICENSE  README.md  example1.py  example2.py  pyproject.toml  requirements.txt  rhino-surf-to-shapely.py  rhino_to_shapely.py  setup.cfg  unittests.py
example_data/: DIES01_POLYLINES.3dm  data.json  file_1.3dm  unit_circle.3dm
examples/: example1.py  example2.py  example3.py
rhino_shapely_interop/: importers.py  rhino_wrappers.py  transformations.py
test/: unittests.py
