[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
skip = ["dist", ".venv", ".env", "venv", "env", "example_data", "reference"]
multi_line_output = 3

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \venv
  | build
  | dist
)/
'''
