[metadata]
name = rhino_shapley_interop
version = 0.0.2
author = Norman JN Richardson
author_email = normanrichardson@gmail.com
description = A python package for converting rhino geometry into shapely geometry 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/normanrichardson/rhino_shapely_interop
project_urls =
    Bug Tracker = https://github.com/normanrichardson/rhino_shapely_interop/issues
license = MIT License
license_file = LICENSE
platform = Any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    rhino3dm
    Shapely

[options.extras_require]
dev = 
    # fix the dependencies for development.
    numpy==1.21.1
    rhino3dm==7.7.0
    Shapely==1.8.0
    matplotlib
    black
    isort
    flake8

dep = 
    twine
    build

[options.packages.find]
exclude =
    test

[flake8]
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    .env,
    env,
    dist,
    reference
